MODUSERSKC-93: add default role creation for system users